# cdmifs

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  cdmi.c  cdmi.h  cdmifs.c  common.h  mime.h  net.c  net.h  util.c  util.h
src/fs/: attr.c  attr.h  control.c  control.h  directory.c  directory.h  operations.h  read.c  read.h  write.c  write.h
